1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Fix.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el (scram-make-unique-nonce): Fix.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-send-command): Add new optional argument
	to delete insecure words in a trace buffer.
	(smtp-auth-cram-md5): Update.
	(smtp-auth-plain): Update.
	(smtp-auth-login): Update.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Comment out vain commands.

1999-12-02  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el: New file.
	* FLIM-ELS (flim-modules): Add `scram-md5'.

1999-12-01  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-anonymous): New function.
	(smtp-authentication-method-alist): Add anonymous.

1999-12-01  Kenichi OKADA <okada@opaopa.org>

	* SLIM-VERSION: Fix.
	* smtp.el: Fix Author.
	* sasl.el (sasl-cram-md5): Update to delete
	insecure sequences.

1999-11-28  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.

1999-11-28  Kenichi OKADA <okada@opaopa.org>

	* ChangeLog: Fix.
	* sasl.el (sasl-cram-md5): Rename `username' from `user'.
	Rename `challenge' from `response'.
	* SLIM-VERION: Add code name.

1999-11-23  Kenichi OKADA <okada@opaopa.org>

	* sha1.el (sha1-encode): Fix and define as obsolete function.
	(sha1-encode-binary): Ditto.

1999-11-23  Kenichi OKADA <okada@opaopa.org>

	* sha1.el (sha1-encode): New alias.
	(sha1-encode-binary): Ditto.


1999-11-23  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.3 released.

1999-11-23  Tsunehiko Baba <tbaba@mtl.t.u-tokyo.ac.jp>

	* sasl.el: Don't require `hmac-util'.
	(sasl-cram-md5): Update to use encode-hex-string.

1999-11-23  Kenichi OKADA <okada@opaopa.org>

	* sha1.el: Update.
	* sha1-el.el: Update.
	* sha1-dl.el: Update.
	* hmac-sha1.el: Update.

1999-06-23  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* sha1-el.el (sha1-string-external): Don't use `with-temp-buffer'.
